app-configs/manifest-app/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spring-boot-route
spec:
  rules:
    - host: www.c5a194a8ee10044eba673c20eb3367691.cn-beijing.alicontainer.com
      http:
        paths:
          - backend:
              serviceName: node-expressjs-sample
              servicePort: 8080
            path: /
